force-app/main/default/objects/rtms__CustomerInvoiceAccessorial__c/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <label>Charge</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>