force-app/main/default/objects/rtms__CustomerInvoiceAccessorial__c/fields/QBO_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>QBO_Item_Id__c</fullName>
    <label>QBO Item Id</label>
    <type>Text</type>
    <length>30</length>
</CustomField>